Fix DiscussionTabMultipleThreadTest color-contrast issues - TNL-4639

--- a/lms/static/sass/discussion/_mixins.scss
+++ b/lms/static/sass/discussion/_mixins.scss
@@ -61,7 +61,7 @@
   @include padding-left($baseline/4);
   padding-top: 3px;
   width: 100%;
-  color: $gray-l2;
+  color: $gray-d2;
   font-size: $forum-small-font-size;
 }
 
